# SummerSchool

./: Crewai.ipylb  Crewai.ipynb  Openaiagent.ipynb
Telegram Bot/telegram-asyncio-bot/: README.md  pyproject.toml  requirements.txt
Telegram Bot/telegram-asyncio-bot/src/: bot.py
Telegram Bot/telegram-asyncio-bot/src/handlers/: __init__.py
Telegram Bot/telegram-asyncio-bot/src/utils/: __init__.py
banknote_authentication/app/: app_streamlit.py  style.css
banknote_authentication/models/: best_model.joblib
banknote_authentication/src/: evaluate.py  predict.py  train.py
face detection motion/: main.py  punch.py  requirements.txt  tempCodeRunnerFile.py
smart_calculator_gui/: calculator.py  gui.py  numpy.py
world-knowledge-chatbot/: app.py  app1.py  requirements.txt
world-knowledge-chatbot/static/: style.css
world-knowledge-chatbot/templates/: index.html
