[tool.poetry]
name = "telegram-asyncio-bot"
version = "0.1.0"
description = "A Telegram bot built with asyncio and aiogram."
authors = ["Your Name <youremail@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
aiogram = "^2.15"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"